<resources>
    <string name="app_name">RickAndMorty3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="advanced_filters">Advanced filters</string>
    <string name="filter_by_name">Filter by name</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="human">Human</string>
    <string name="go_back">Go Back</string>
    <string name="go_back2">GO BACK</string>
    <string name="rick_sanchez2">RICK SANCHEZ</string>
    <string name="information">Information</string>
    <string name="menu_list">Menu List</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="name_of_episode">Name of Episode</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="origin">Origin</string>
    <string name="specie">Specie</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="go"><![CDATA[->]]></string>
    <string name="iv_episode">iv_episode</string>
    <string name="iv_location">iv_location</string>
    <string name="iv_rick_and_morty_characters">iv_rick_and_morty_characters</string>
    <string name="lottie_text">Здесь пока ничего нет</string>
</resources>