<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CharacterDetailsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_marginTop="64dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="146dp"
        android:layout_height="148dp"/>
    <TextView
        android:id="@+id/tv_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="26dp"
        android:drawableStart="@drawable/ic_back"
        android:layout_marginStart="44dp"
        android:text="@string/go_back2"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="312dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/rick_sanchez"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="27dp"/>
    <TextView
        android:id="@+id/tv_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"
        app:layout_constraintTop_toBottomOf="@id/tv_specie"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="27dp"/>
    <TextView
        android:id="@+id/tv_specie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specie"
        app:layout_constraintTop_toBottomOf="@id/tv_status"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="27dp"/>
    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@id/tv_origin"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="27dp"/>
    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="27dp"/>
    <TextView
        android:id="@+id/tv_gender2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="2dp"/>
    <TextView
        android:id="@+id/tv_status2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintTop_toBottomOf="@id/tv_status"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="2dp"/>
    <TextView
        android:id="@+id/tv_origin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"
        app:layout_constraintTop_toBottomOf="@id/tv_origin"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="2dp"/>
    <TextView
        android:id="@+id/tv_specie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specie"
        app:layout_constraintTop_toBottomOf="@id/tv_specie"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="2dp"/>
    <TextView
        android:id="@+id/tv_type2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="2dp"/>
    <TextView
        android:id="@+id/tv_location2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginStart="56dp"
        android:layout_marginTop="2dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>