<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CharactersFragment">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <ImageView
        android:id="@+id/iv_rick_and_morty_characters"
        android:layout_width="312dp"
        android:layout_height="104dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rick_and_morty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
       android:contentDescription="@string/iv_rick_and_morty_characters"/>

    <EditText
        android:id="@+id/filter"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_circle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:paddingHorizontal="3dp"
        app:layout_constraintTop_toBottomOf="@id/iv_rick_and_morty_characters"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/filter_by_name"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/advanced_filters_et"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_style1"
        android:drawableStart="@drawable/ic_filter_list"
        android:hint="@string/advanced_filters"
        android:importantForAutofill="no"
        android:paddingHorizontal="3dp"
        android:textColor="@color/blue"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter"
        android:inputType="text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/advanced_filters_et"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_characters"/>

    <Button
       android:id="@+id/next_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:text="@string/go"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/btn_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>