<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.LocationsFragment">
    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="218dp"
        android:layout_height="136dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/locations_rick"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/iv_location"/>
    <EditText
        android:id="@+id/filter"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_circle"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_location"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/filter_by_name"
        android:importantForAutofill="no"
        android:inputType="text"/>
    <EditText
        android:id="@+id/advanced_filters_et"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_filter_list"
       android:paddingHorizontal="3dp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter"
        android:background="@drawable/bg_style1"
        android:hint="@string/advanced_filters"
        android:importantForAutofill="no"
        android:inputType="text"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/advanced_filters_et"/>


</androidx.constraintlayout.widget.ConstraintLayout>